# syotools

./: .gitignore  CHANGES  README.md  VERSION  pyproject.toml  setup.py  template_information.txt
.github/workflows/: ci.yml  release.yml
syotools/: __init__.py
syotools/coronagraph/coronagraph/: degrade_spec_old.py
syotools/defaults/: __init__.py  model_defaults.py  model_defaults.yaml  spec_defaults.py
syotools/models/: __init__.py  base.py  camera.py  coronagraph.py  exposure.py  ifs.py  scene.py  source.py  source_exposure.py  spectrograph.py  telescope.py
syotools/spectra/: __init__.py  library.py  spec_defaults.py  utils.py
syotools/utils/: hwo_create_disperser.py  jsonunit.py  ordered_yaml.py  yaml_utils.py
syotools/wrappers/: camera.py  camera_wrapper.py  common.py  uvspec.py  uvspec_wrapper.py
tests/: generate_exptime_tests.py  generate_magnitude_tests.py  generate_sed_tests.py  generate_snr_tests.py  test_exptimes.py  test_magnitudes.py  test_seds.py  test_snrs.pickle  test_snrs.py  test_sourceoptions.py  test_syotools.py  test_telescope_diffraction_limit.py  test_telescopy.py
tests/baselines/: camera_exptime.pickle  test_exptimes.yml  test_magnitudes.yml  test_magnitudes.yml.xz  test_seds.yml  test_seds.yml.xz  test_snrs.pickle  test_snrs.yml  test_snrs.yml.xz
tests/baselines/exptimes/: exptime_EAC1_hri_0.1.yml  exptime_EAC1_hri_100000.0.yml  exptime_EAC1_hri_10344.91724137931.yml  exptime_EAC1_hri_13793.189655172413.yml  exptime_EAC1_hri_17241.462068965513.yml  exptime_EAC1_hri_20689.734482758617.yml  exptime_EAC1_hri_24138.00689655172.yml  exptime_EAC1_hri_27586.279310344824.yml  exptime_EAC1_hri_31034.551724137928.yml  exptime_EAC1_hri_3448.372413793103.yml  exptime_EAC1_hri_34482.82413793103.yml  exptime_EAC1_hri_37931.096551724135.yml  exptime_EAC1_hri_41379.368965517235.yml  exptime_EAC1_hri_44827.64137931034.yml  exptime_EAC1_hri_48275.91379310344.yml  exptime_EAC1_hri_51724.18620689655.yml  exptime_EAC1_hri_55172.45862068965.yml  exptime_EAC1_hri_58620.73103448275.yml  exptime_EAC1_hri_62069.00344827586.yml  exptime_EAC1_hri_65517.27586206896.yml  exptime_EAC1_hri_6896.644827586207.yml  exptime_EAC1_hri_68965.54827586206.yml  exptime_EAC1_uvi_0.1.yml  (+157 more)
(+495 files in other folders)
