[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "syotools"
version = "1.2"
description = "Science Yield Optimization Tools (SYOTools)"
authors = [
    {name = "Jason Tumlinson, STScI", email = "tumlinson@stsci.edu"}
]
license = "BSD-3-Clause"
keywords = ["simulation", "astronomy", "astrophysics"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "hwo_sci_eng==0.1.9",
    "astropy>6",
    "pysynphot==2.0.0",
    "numpy",
    "scipy",
    "specutils",
]

[project.urls]
Homepage = "https://github.com/spacetelescope/hwo-tools"

[tool.setuptools]
packages = [
    "syotools",
    "syotools.coronagraph",
    "syotools.reference_data",
    "syotools.reference_data.pysynphot_data",
    "syotools.defaults",
    "syotools.interface",
    "syotools.models",
    "syotools.persistence",
    "syotools.spectra",
    "syotools.utils",
    "syotools.wrappers",
]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
    "*.yaml",
    "*.fits",
    "fesc/*txt",
    "*.txt",
    "*.dat",
    "reference_data/pysynphot_data/calspec/*",
    "reference_data/pysynphot_data/comp/*",
    "reference_data/pysynphot_data/grid/*",
    "reference_data/pysynphot_data/mtab/*",
    "reference_data/pysynphot_data/comp/nonhst/*",
    "reference_data/pysynphot_data/grid/agn/*",
    "reference_data/pysynphot_data/grid/etc_models/*",
    "reference_data/pysynphot_data/grid/galactic/*",
    "reference_data/pysynphot_data/grid/kc96/*",
    "reference_data/pysynphot_data/grid/pickles/*",
    "reference_data/pysynphot_data/grid/pickles/dat_uvk/*",
    "reference_data/pysynphot_data/extinction/*"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-env>=1.1.5",  # Required for environment variable support
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["."]
addopts = "-q -ra -s"
env = [
    "PYSYN_CDBS=syotools/reference_data/pysynphot_data/"
]
